[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/table/header.gd" type="Script" id=1]

[node name="header" type="HBoxContainer"]
margin_right = 70.0
margin_bottom = 14.0
rect_min_size = Vector2( 70, 0 )
custom_constants/separation = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 64.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "HEADER"
clip_text = true

[node name="sort button" type="TextureButton" parent="Label"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 66.0
margin_right = 70.0
margin_bottom = 14.0
mouse_filter = 2
mouse_default_cursor_shape = 14

[node name="TextureButton" type="TextureButton" parent="VSeparator"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 15
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Label/sort button" to="." method="_on_sort_button_button_down"]
[connection signal="button_down" from="VSeparator/TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="VSeparator/TextureButton" to="." method="_on_TextureButton_button_up"]
